# 4mb-platformer

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Chipmunk2D.cmake  Raylib.cmake  box2d-lite.cmake  chirp.cmake  project.toml  raylib.cmake  readme.md  resources.cmake
.github/workflows/: linux.yml  macos.yml  source.yml  windows.yml
assets/: .gitignore  readme.md
assets/image/: arrow.tga  background.tga  santa.tga  tree.tga
assets/level/: 1-1.clf  1-2.clf  1-3.clf  1-4.clf  1-B.clf  2-1.clf  2-2.clf  2-3.clf  2-4.clf  2-B.clf  level0.clf  level1.clf  level2.clf  level3.clf  level4.clf  level5.clf  level6.clf  level7.clf  level8.clf  level9.clf
assets/music/: level2.xm  menu.xm
assets/shader/: grayscale.frag
assets/tileset/: cake.tga  enemy.tga  hud.tga  items.tga  player.tga  snow.tga
src/: colors.cpp  colors.hpp  keymap.cpp  keymap.hpp  main.cpp  main.py  physics.hpp  res.hpp  state.cpp  state.hpp  vec2.cpp  vec2.hpp
src/asset/: font.cpp  font.hpp  image.cpp  image.hpp  level.cpp  level.hpp  music.cpp  music.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  tileset.cpp  tileset.hpp
src/clf/: clf.cpp  clf.hpp  clfloader.hpp  clfv2.cpp  clfv2.hpp  clfv3.cpp  clfv3.hpp
src/engine/: animatedsprite.cpp  animatedsprite.hpp  assets.cpp  assets.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  clock.cpp  clock.hpp  draw.cpp  draw.hpp  dynamicbody.cpp  dynamicbody.hpp  font.cpp  font.hpp  format.hpp  image.cpp  image.hpp  input.cpp  input.hpp  key.hpp  level.cpp  level.hpp  map.hpp  movable.cpp  movable.hpp  music.cpp  music.hpp  physics.cpp  physics.hpp  physicsbody.cpp  physicsbody.hpp  physicsconfig.hpp  rect.hpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp  staticbody.cpp  (+10 more)
src/entity/: boss.cpp  boss.hpp  hud.cpp  hud.hpp  leveltitle.cpp  leveltitle.hpp  map.cpp  map.hpp  pause.cpp  pause.hpp  player.cpp  player.hpp  state.cpp  state.hpp  transition.cpp  transition.hpp
src/enum/: direction.hpp  leveltype.hpp  scenes.hpp  scenetype.hpp  tiletype.hpp
src/level/: level1.cpp  (+22 more)
(+21 files in other folders)
